Add exhaustive execution